--- a/index.html
+++ b/index.html
@@ -1,3 +1,51 @@
+<!DOCTYPE html>
 <html>
-	<p>{<br>Hello World<br>}</p>
+<head>
+    <title>Portfolio Page</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .portfolio-item { margin-bottom: 20px; }
+        .portfolio-item h2 { margin: 0 0 5px 0; }
+        .portfolio-item p { margin: 0; }
+    </style>
+</head>
+<body>
+    <h1>My Portfolio</h1>
+    <div id="portfolio"></div>
+
+    <script>
+        // Example portfolio data in JSON format
+        var portfolioData = {
+            "portfolio": [
+                {
+                    "title": "Project 1",
+                    "description": "Description of Project 1.",
+                    "technologies": ["HTML", "CSS", "JavaScript"]
+                },
+                {
+                    "title": "Project 2",
+                    "description": "Description of Project 2.",
+                    "technologies": ["Python", "Django"]
+                },
+                // Add more projects as needed
+            ]
+        };
+
+        function displayPortfolio(data) {
+            var portfolioContainer = document.getElementById('portfolio');
+            data.portfolio.forEach(function(project) {
+                var item = document.createElement('div');
+                item.className = 'portfolio-item';
+                item.innerHTML = '<h2>' + project.title + '</h2>' +
+                                 '<p>' + project.description + '</p>' +
+                                 '<p>Technologies: ' + project.technologies.join(', ') + '</p>';
+                portfolioContainer.appendChild(item);
+            });
+        }
+
+        // Call the function to display the portfolio
+        displayPortfolio(portfolioData);
+    </script>
+</body>
 </html>
+
