--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Portfolio JSON Display - Dark Mode</title>
+    <title>Blog - Dark Mode</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -29,24 +29,40 @@
     </style>
 </head>
 <body>
-    <h1>Portfolio JSON Data</h1>
     <pre id="portfolioJson"></pre>
 
     <script>
         // Example portfolio data in JSON format
         var portfolioData = {
-            "portfolio": [
+            "Intro": {
+                "name": "Caleb Forestal",
+                "portfolio": [
+                    {
+                        "title": "Summit Lawn Care",
+                        "description": "Before there was software as a service, there was just service",
+                        "technologies": ["Sales", "Manual labor", "Grass"]
+                    },
+                    {
+                        "title": "Relix",
+                        "description": "A Research company",
+                        "technologies": ["AI", "R&D"]
+                    },
+                    {
+                        "title": "Powderly",
+                        "description": "A passion project",
+                        "technologies": ["Community", "Skiing"]
+                    },
+                ]
+            },
+            "Blogs": [
                 {
-                    "title": "Project 1",
-                    "description": "Description of Project 1.",
-                    "technologies": ["HTML", "CSS", "JavaScript"]
-                },
-                {
-                    "title": "Project 2",
-                    "description": "Description of Project 2.",
-                    "technologies": ["Python", "Django"]
-                },
-                // Add more projects as needed
+                "title": "Loading..........",
+                "description": "Loading......",
+                "body": "Loading........",
+                "id": "Loading.....",
+                "createdat": "Loading........."
+                }
+
             ]
         };
 
