--- a/index.html
+++ b/index.html
@@ -1,99 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Blog - Dark Mode</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Fira Code', monospace;
-            background-color: #1e1e1e;
-            color: #d4d4d4;
-            margin: 0;
-            padding: 20px;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.1'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-        }
-        pre {
-            /* background-color: #3f3a3a; */
-            color: #d4d4d4;
-            padding: 20px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-        .json-key {
-            color: #9cdcfe;
-        }
-        .json-value {
-            color: #ce9178;
-        }
-        .json-string {
-            color: #b5cea8;
-        }
-        .json-boolean, .json-null {
-            color: #569cd6;
-        }
-        .json-number {
-            color: #b5cea8;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Very Good Films</title>
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background-color: #fff;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  .container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  table, th, td {
+    border: 1px solid #ddd;
+  }
+  th {
+    background-color: #f3f3f3;
+    padding: 10px;
+    cursor: pointer;
+  }
+  td {
+    padding: 10px;
+    text-align: left;
+  }
+  th, td {
+    text-align: left;
+  }
+  .add-button {
+    text-align: center;
+    color: red;
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
-    <pre id="portfolioJson"></pre>
 
-    <script>
-        var portfolioData = {
-            "Intro": {
-                "name": "Caleb Forestal",
-                "portfolio": [
-                    {
-                        "title": "Summit Lawn Care",
-                        "description": "Before there was software as a service, there was just service",
-                        "technologies": ["Sales", "Manual labor", "Grass"]
-                    },
-                    {
-                        "title": "Relix",
-                        "description": "A Research company",
-                        "technologies": ["AI", "R&D"]
-                    },
-                    {
-                        "title": "Powderly",
-                        "description": "A passion project",
-                        "technologies": ["Community", "Skiing"]
-                    },
-                ]
-            },
-            "Blogs": [
-                {
-                    "title": "Loading..........",
-                    "description": "Loading......",
-                    "body": "Loading........",
-                    "id": "Loading.....",
-                    "createdat": "Loading........."
-                }
-            ]
-        };
+<header>
+  <h1>Very Good Films</h1>
+  <p>An online film catalogue by film lovers. Sharing since 2020.</p>
+  <!-- Additional header content here -->
+</header>
 
-        function syntaxHighlight(json) {
-            json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-            return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function(match) {
-                var cls = 'json-value';
-                if (/^"/.test(match)) {
-                    if (/:$/.test(match)) {
-                        cls = 'json-key';
-                    } else {
-                        cls = 'json-string';
-                    }
-                } else if (/true|false/.test(match)) {
-                    cls = 'json-boolean';
-                } else if (/null/.test(match)) {
-                    cls = 'json-null';
-                } else {
-                    cls = 'json-number';
-                }
-                return '<span class="' + cls + '">' + match + '</span>';
-            });
-        }
+<div class="container">
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Year</th>
+        <th>Director</th>
+        <th>Country</th>
+        <th>Genre</th>
+        <th></th> <!-- For the add button -->
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Repeat this tr for each film, data should be dynamically loaded -->
+      <tr>
+        <td>10 Things I Hate About You</td>
+        <td>1999</td>
+        <td>Gil Junger</td>
+        <td>United States</td>
+        <td>Comedy</td>
+        <td class="add-button">+</td>
+      </tr>
+      <!-- More rows... -->
+    </tbody>
+  </table>
+</div>
 
-        document.getElementById('portfolioJson').innerHTML = syntaxHighlight(JSON.stringify(portfolioData, null, 4));
-    </script>
 </body>
 </html>
