--- a/inde.html
+++ b/inde.html
@@ -39,6 +39,22 @@
 <body>
     <pre id="portfolioJson"></pre>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 Very Good Films. All rights reserved.</p>
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <!-- Add other social links here -->
+        </div>
+        <p>
+            <a href="about.html">About</a> |
+            <a href="privacy.html">Privacy</a> |
+            <a href="terms.html">Terms & Conditions</a>
+        </p>
+    </footer>
+    
     <script>
         var portfolioData = {
             "Intro": {
