--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 </div>
 
 <!-- Full-width lines with 'X' -->
+<div class="line">h</div>
+<div class="line">e</div>
+<div class="line">l</div>
+<div class="line"></div>
+<div class="line"></div><br>
+<div class="line">l</div>
+<div class="line">o</div>
+<div class="line"></div>
+<div class="line"></div>
 <div class="line"></div>
 <div class="line"></div>
 <div class="line"></div>
