--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 <body>
 
 <div class="header">
-  <p>Random filler text goes here at the top of the page.</p>
+  <p>Hello World</p>
 </div>
 
 <!-- Full-width lines with 'X' -->
-<div class="line">h</div>
-<div class="line">e</div>
-<div class="line">l</div>
+<div class="line"><p>h</p></div>
+<div class="line"><p>e</p></div>
+<div class="line"><p>l</p></div>
 <div class="line"></div>
 <div class="line"></div><br>
-<div class="line">l</div>
-<div class="line">o</div>
+<div class="line"><p>l</p></div>
+<div class="line"><p>o</p></div>
 <div class="line"></div>
 <div class="line"></div>
 <div class="line"></div>
