--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <pre id="portfolioJson"></pre>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer" >
         <p>&copy; 2024 Relix Co. | All rights reserved.</p>
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
