--- a/whisper.html
+++ b/whisper.html
@@ -1,13 +1,9 @@
-# Let's create a basic HTML with inline CSS to demonstrate the envisioned blog design.
-# This demo will include the color scheme, typography, and layout elements described.
-
-html_demo = """
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Intimate Blog Demo</title>
+<title>Blog Demo</title>
 <style>
     body {
         font-family: 'Lato', sans-serif;
@@ -94,7 +90,3 @@ html_demo = """
 
 </body>
 </html>
-"""
-
-# Display the HTML code
-html_demo
