--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -34,8 +36,11 @@
         .json-number {
             color: #b5cea8;
         }
-        footer {
-            align-self: center;
+        .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
         }
     </style>
 </head>
