--- a/logs.html
+++ b/logs.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Full-Width Lines Layout</title>
+<title>Logs</title>
 <style>
   body, html {
     margin: 0;
