--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                 <a href="privacy.html">Privacy</a> |
                 <a href="terms.html">Terms & Conditions</a>
             </p>
+            <a
+            id="cy-effective-orcid-url"
+            class="underline"
+            href="https://orcid.org/0009-0006-2043-465X"
+            target="orcid.widget"
+            rel="me noopener noreferrer"
+            style="vertical-align: top">
+            <img
+                src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+                style="width: 1em; margin-inline-start: 0.5em"
+                alt="ORCID iD icon"/>
+            https://orcid.org/0009-0006-2043-465X
+            </a>
         </footer>
     </body>
 </html>
