--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <meta property="og:url" content="https://powder.ly">
         <meta property="og:title" content="Powder.ly">
         <meta property="og:description" content="Connect. Learn. Ski.">
-        <meta property="og:image" content="/img1.jpeg">
+        <meta property="og:image" content="/twit_1.png">
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:url" content="https://powder.ly">
         <meta name="twitter:title" content="Powder.ly">
         <meta name="twitter:description" content="Connect. Learn. Ski.">
-        <meta name="twitter:image" content="/img1.jpeg"> <!-- (1024x512px) -->
+        <meta name="twitter:image" content="/twit_1.png"> <!-- (1024x512px) -->
 
         <!-- Styling -->
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
