--- a/redirect.html
+++ b/redirect.html
@@ -5,8 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Basic Meta Tags -->
-        <title>index.html</title>
-        <meta name="description" content="Some cool site I found.">
+        <title>Powder.ly</title>
+        <meta name="description" content="Connect. Learn. Ski.">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://powder.ly">
+        <meta property="og:title" content="Powder.ly">
+        <meta property="og:description" content="Connect. Learn. Ski.">
+        <meta property="og:image" content="/public/twit_1.png">
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url" content="https://powder.ly">
+        <meta name="twitter:title" content="Powder.ly">
+        <meta name="twitter:description" content="Connect. Learn. Ski.">
+        <meta name="twitter:image" content="/public/twit_1.png"> <!-- (1024x512px) -->
 
         <!-- Styling -->
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
