--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             padding: 20px;
             border-radius: 5px;
             overflow-x: auto;
+            overflow-y: auto;
         }
         .json-key {
             color: #9cdcfe;
