--- a/json.html
+++ b/json.html
@@ -6,9 +6,6 @@
     <title>Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        html {
-            background-color: #1e1e1e;
-        }
         body {
             font-family: 'Fira Code', monospace;
             background-color: #1e1e1e;
@@ -55,19 +52,19 @@
     <pre id="portfolioJson"></pre>
 
     <!-- Footer -->
-    <!-- <footer>
+    <footer>
         <p>&copy; 2024 Relix Co. All rights reserved.</p>
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
-        <p>
+        <!-- <p>
             <a href="about.html">About</a> |
             <a href="privacy.html">Privacy</a> |
             <a href="terms.html">Terms & Conditions</a>
-        </p>
-    </footer> -->
+        </p> -->
+    </footer>
     
     <script>
         var portfolioData = {
