--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     <style>
         html {
-            background-color: #1e1e1e;
+            background-color: #ffffff;
         }
         body {
             font-family: 'Fira Code', monospace;
