--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         body {
             font-family: 'Fira Code', monospace;
-            background-color: #1e1e1e;
+            /* background-color: #1e1e1e; */
             color: #d4d4d4;
             margin: 0;
             padding: 20px;
