--- a/dev/index.html
+++ b/dev/index.html
@@ -166,16 +166,15 @@
     </section>
 
     <section>
-        <input type="email" placeholder="Enter your email">
-        <button>Join queue</button>
+        <form action="https://formspree.io/f/{your-id}" method="POST">
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <button type="submit">Join queue</button>
+        </form>
     </section>
 
     <footer class="terms">
         <a href="#">Terms and Conditions</a>
     </footer>
-    <script>
-        
-    </script>
 </body>
 
 </html>
