--- a/dev/index.html
+++ b/dev/index.html
@@ -187,14 +187,14 @@
 <body>
     <header>
         <h1>RelixAI</h1>
-        <div class="dropdown">
-            <button class="dropbtn">Settings</button>
+        <!-- <div class="dropdown">
+            <button class="dropbtn">menu</button>
             <div class="dropdown-content">
                 <a href="#">Profile</a>
                 <a href="#">Preferences</a>
                 <a href="#">Logout</a>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <section>
