--- a/dev/index.html
+++ b/dev/index.html
@@ -158,7 +158,7 @@
                 padding: 0 0 0 5%;
             }
 
-            header {
+            /* header {
                 padding: 20px 3rem;
             }
 
@@ -169,7 +169,7 @@
             header button {
                 position: static;
                 margin-top: 20px;
-            }
+            } */
         }
 
         @media (min-width: 601px) {
